...
    <string name="oauth_access_token_secret">oauth_access_token_secret</string>

    <string name="beta_login_screen">In this version, you must log in to or create a Discogs account to browse</string>

    <string name="action_settings">Settings</string>
    <string name="discogs_base">https://api.discogs.com</string>
    <string name="drawer_item_collection">Collection</string>
    <string name="drawer_item_wantlist">Wantlist</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="orders">Orders</string>
    <string name="selling">Selling</string>

    <string name="consumer_key">YkTWFsitqurUQSvyQwaG</string>
    <string name="consumer_secret">PJHslKRSRmZURHXdPWBSKNZPbdsGpASW</string>

    <string name="username">username</string>
    <string name="avatar_url">avatar_url</string>
    <string name="no_12_for_sale">No 12\" for sale</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_to_wantlist">Add to Wantlist</string>
    <string name="fetch_next_collection">fetch_next_collection</string>
    <string name="fetch_next_wantlist">fetch_next_wantlist</string>
    <string name="fetch_next_user_details">fetch_next_user_details</string>
    <string name="wantlist_none">Nothing in your Wantlist yet</string>
    <string name="error_wantlist">Unable to load Wantlist</string>
    <string name="collection_none">Nothing in your Collection yet</string>
...
    <string name="error">error</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_content">Non-intelligent recommender system that suggests tracks in the same genre or label as releases you have looked at</string>
    <string name="onboarding_completed">onboarding_completed</string>
    <string name="view_releases">View releases</string>
    <string name="no_items">No items</string>
    <string name="remove_from_collection">Remove from Collection</string>
    <string name="remove_from_wantlist">Remove from Wantlist</string>
</resources>

