<?xml version="1.0" encoding="utf-8"?>
<bj.vinylbrowser.customviews.MyRecyclerView
    android:id="@+id/recyclerView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</bj.vinylbrowser.customviews.MyRecyclerView>
